--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -151,7 +151,6 @@ main {
     align-items: center;
     gap: 20px;
     border-top: 1px solid var(--border-color);
-    border-bottom: 1px solid var(--border-color);
 }
 
 .group-action {
@@ -244,6 +243,7 @@ main {
     width: 40px;
     height: 40px;
     border-radius: 50%;
+    cursor: pointer;
 }
 
 .author-information {
@@ -251,6 +251,7 @@ main {
     display: flex;
     flex-direction: column;
     font-weight: 600;
+    cursor: pointer;
 }
 
 .name,
@@ -258,6 +259,13 @@ main {
     letter-spacing: 1px;
 }
 
+.box-featured-post.row {
+    margin-left: 0;
+    margin-right: 0;
+}
+.box-featured-post.row .card {
+    padding: 0;
+}
 /* contact */
 .box-contact-title {
     margin-top: 10px;
